force-app/main/default/objects/FieloSVY__SurveyResponseQuestion__c/FieloSVY__SurveyResponseQuestion__c.object-meta.xml
<CustomObject>
    <label>Survey Response Question</label>
    <nameField>
        <displayFormat>RQ-{00000}</displayFormat>
        <label>Survey Response Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Response Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>