force-app/main/default/objects/FieloSVY__SurveyResponseQuestion__c/fields/FieloSVY__FreeText__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__FreeText__c</fullName>
    <label>Free Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>