force-app/main/default/objects/FieloSVY__SurveyResponseQuestion__c/fields/FieloSVY__NumberOfTimesResponse__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__NumberOfTimesResponse__c</fullName>
    <label>Number of Times Response</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>