force-app/main/default/objects/FieloSVY__SurveyResponseQuestion__c/fields/FieloSVY__Numeric__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Numeric__c</fullName>
    <label>Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>