force-app/main/default/objects/FieloSVY__SurveyResponseQuestion__c/fields/FieloSVY__Option__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Option__c</fullName>
    <label>Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>