force-app/main/default/objects/FieloSVY__SurveyResponseQuestion__c/fields/FieloSVY__SurveyQuestion__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__SurveyQuestion__c</fullName>
    <label>Survey Question</label>
    <referenceTo>FieloSVY__SurveyQuestion__c</referenceTo>
    <relationshipLabel>Survey Response Questions</relationshipLabel>
    <relationshipName>Survey_Response_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>