force-app/main/default/objects/FieloSVY__SurveyResponseQuestion__c/fields/FieloSVY__SurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__SurveyResponse__c</fullName>
    <label>Survey Response</label>
    <referenceTo>FieloSVY__SurveyResponse__c</referenceTo>
    <relationshipLabel>Survey Response Questions</relationshipLabel>
    <relationshipName>Survey_Response_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>